--- a/templates/pages/playlist.html.twig
+++ b/templates/pages/playlist.html.twig
@@ -9,8 +9,8 @@
                 {% for playlist in playlistcategories %}
                     {{ playlist.name }}&nbsp;
                 {% endfor %}
-            <br /><br />
-            <strong>description :</strong><br />
+            <br><br>
+            <strong>description :</strong><br>
                 {{ playlist.description|nl2br }}
         </div>
         <div class="col">
@@ -20,19 +20,18 @@
                     <div class="col-md-auto">
                         {% if formation.miniature %}
                             <a href="{{ path('formations.showone', {id:formation.id}) }}">
-                                <img src="{{ formation.miniature }}">
+                                <img src="{{ formation.miniature }}" alt="Miniature de la formation">
                             </a>
-                        {% endif %}  
+                        {% endif %}
                     </div>
                     <div class="col d-flex align-items-center">
-                        <a href="{{ path('formations.showone', {id:formation.id}) }}" 
+                        <a href="{{ path('formations.showone', {id:formation.id}) }}"
                            class="link-secondary text-decoration-none">
                             {{ formation.title }}
-                        </a>          
+                        </a>
                     </div>
                 </div>
             {% endfor %}
         </div>
-        
     </div>
 {% endblock %}
