--- a/templates/pages/playlists.html.twig
+++ b/templates/pages/playlists.html.twig
@@ -18,6 +18,11 @@
                     </form>
                 </th>
                 <th class="text-left align-top" scope="col">
+                    nb formations<br>
+                    <a href="{{ path('playlists.sort', {champ:'formations', ordre:'ASC'}) }}" class="btn btn-info btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('playlists.sort', {champ:'formations', ordre:'DESC'}) }}" class="btn btn-info btn-sm active" role="button" aria-pressed="true">></a>
+                </th>
+                <th class="text-left align-top" scope="col">
                     catégories
                     <form class="form-inline mt-1" method="POST" action="{{ path('playlists.findallcontain', {champ:'id', table:'categories'}) }}">
                         <select class="form-select form-select-sm" name="recherche" id="recherche" onchange="this.form.submit()">
@@ -48,6 +53,9 @@
                                 {{ playlists[k].name }}
                             </h5>
                         </td>
+						<td>
+							{{ playlists[k].getFormations().count }}
+						</td>
                         <td class="text-left">
                             {% set categories = playlists[k].categoriesplaylist %}
                             {% if categories|length > 0  %}
